--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Title -->
+    <title>Diversity + Inclusion</title>
+    <!-- Favicon 
+    <link rel="shortcut icon" href="/favicon1.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" href="/apple-touch-icon.png" >
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/apple-touch-icon-180x180.png">-->
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
