add meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta tags for search engines-->
+    <meta name="description" content="Diversity and Inclusion, website for information about diversity and inclusion in the workplace, website for information about diversity and inclusion in an educational evironment, uk related guidelines">
+    <meta name="keywords" content="diversity, equal treatment at work, inclusivity, anti-bullying, anti-discrimination, how to implement diversity and inclusivity policies and practices uk">
     <!-- Title -->
     <title>Diversity + Inclusion</title>
     <!-- Favicon 
