conect css file to html file, check works with basic styling, override default styling applied by the browser with wildcard selector

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="shortcut icon" href="/favicon1.ico" type="image/x-icon">
     <link rel="icon" type="image/png" href="/apple-touch-icon.png" >
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/apple-touch-icon-180x180.png">-->
+
+    <!-- Stylesheet -->
+     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
