changed body font to Roboto, add logo to header and applied Lato font

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 
 <body>
     <!--Header-->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Diversity + Inclusion</h1>
+        </a>
+    </header>
 
     <!--Main content-->
     <main>Main Content</main>
