create navigation section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <a href="index.html">
             <h1 id="logo">Diversity + Inclusion</h1>
         </a>
+        <nav>
+            <ul>
+                <li><a href="">Advice for Educators</a></li>
+                <li><a href="">Advice for Employers</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!--Main content-->
