begin adding internal link code to nav bar

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             <h1 id="logo">Diversity + Inclusion</h1>
         </a>
         <nav>
-            <ul>
-                <li><a href="">Advice for Educators</a></li>
-                <li><a href="">Advice for Employers</a></li>
+            <ul id="menu">
+                <!--<li><a href="#logo">Back to top</a></li>-->
+                <li><a href="#adviceedu">Advice for Educators</a></li>
+                <li><a href="#adviceemloy">Advice for Employers</a></li>
             </ul>
         </nav>
     </header>
