--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <a href="index.html">
             <h1 id="logo">Diversity + Inclusion</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <ul id="menu">
                 <!--<li><a href="#logo">Back to top</a></li>-->
