add font awesome and first footer link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for search engines-->
-    <meta name="description" content="Diversity and Inclusion, website for information about diversity and inclusion in the workplace, website for information about diversity and inclusion in an educational evironment, uk related guidelines">
-    <meta name="keywords" content="diversity, equal treatment at work, inclusivity, anti-bullying, anti-discrimination, how to implement diversity and inclusivity policies and practices uk">
+    <meta name="description"
+        content="Diversity and Inclusion, website for information about diversity and inclusion in the workplace, website for information about diversity and inclusion in an educational evironment, uk related guidelines">
+    <meta name="keywords"
+        content="diversity, equal treatment at work, inclusivity, anti-bullying, anti-discrimination, how to implement diversity and inclusivity policies and practices uk">
     <!-- Title -->
     <title>Diversity + Inclusion</title>
     <!-- Favicon 
@@ -15,7 +17,7 @@
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/apple-touch-icon-180x180.png">-->
 
     <!-- Stylesheet -->
-     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -39,8 +41,14 @@
     <main>Main Content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
-
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+    <!-- Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/29b5412e17.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
