add cover text to hero image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 
     <!--Main content-->
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+            <div id="cover-text">
+            <h2>Your resource for inclusive change</h2>
+            </div>
+        </section>
     </main>
 
     <!--Footer-->
