add image to benefits section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,37 @@
             <h2>Your resource for inclusive change</h2>
             </div>
         </section>
+        <section id="help">
+            <h2>Encouraging equality, diversity and inclusion brings numerous benefits.</h2>
+            <div id="benefits">
+                <div id="benefits1">
+                    <div>
+                        <h3>Enhanced Creativity and Innovation <i class="fa-solid fa-pencil"></i></h3>
+                        <hr>
+                        <p>Diverse teams bring a variety of perspectives, experiences and ideas. The rich mix fosters creativity and can lead to innovative solutions and approaches that might not emerge in a more homogenous group.</p>
+                    </div>
+                    <div>
+                        <h3>Improved Problem-Solving<i class="fa-solid fa-magnifying-glass"></i></h3>
+                        <hr>
+                        <p>A diverse workforce is better equipped to analyze problems from multiple angles. this diversity of thought can lead to more effective problem-solving and decision-making, ultimately improving outcomes.</p>
+                    </div>
+                </div>
+                <div id="benefits2">
+                    <div><h3>Greater Employee Satisfaction <i class="fa-regular fa-face-smile"></i></h3>
+                        <hr>
+                        <p>When individuals feel included and valued, they are more likely to be engaged and satisfied with their work or studies. this can lead to lower turnover rates and a more positive organizational culture.</p>
+                    </div>
+                    <div><h3>Broader Market Reach<i class="fa-solid fa-globe"></i></h3>
+                        <hr>
+                        <p>Organizations that prioritize diversity and inclusion can better understand and connect with diverse customer bases. This cultural competence can enhance marketing efforts, customer relations, and overall business success by appealing to a wider audience.</p>
+                    </div>
+                </div>
+                <div id="benefits-image">
+                    <div id="circle-cover-bg">
+                </div>
+            </div>
+
+        </section>
     </main>
 
     <!--Footer-->
