--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div id="benefits-image">
-                    <div id="circle-cover-bg">
+                    <div id="circle-cover-bg"></div>
                 </div>
             </div>
 
