change content and some ID names accordingly

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <!--<li><a href="#logo">Back to top</a></li>-->
-                <li><a href="#adviceedu">Advice for Educators</a></li>
-                <li><a href="#adviceemloy">Advice for Employers</a></li>
+                <li><a href="#hero">Back to top</a></li>
+                <li><a href="#diversity">Diversity</a></li>
+                <li><a href="#inclusivity">Inclusivity</a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +41,7 @@
     <main>
         <section id="hero">
             <div id="cover-text">
-            <h2>Your resource for inclusive change</h2>
+                <h2>Your resource for inclusive change</h2>
             </div>
         </section>
         <section id="help">
@@ -51,22 +51,32 @@
                     <div>
                         <h3>Enhanced Creativity and Innovation <i class="fa-solid fa-pencil"></i></h3>
                         <hr>
-                        <p>Diverse teams bring a variety of perspectives, experiences and ideas. The rich mix fosters creativity and can lead to innovative solutions and approaches that might not emerge in a more homogenous group.</p>
+                        <p>Diverse teams bring a variety of perspectives, experiences and ideas. The rich mix fosters
+                            creativity and can lead to innovative solutions and approaches that might not emerge in a
+                            more homogenous group.</p>
                     </div>
                     <div>
-                        <h3>Improved Problem-Solving<i class="fa-solid fa-magnifying-glass"></i></h3>
+                        <h3>Improved Problem-Solving <i class="fa-solid fa-magnifying-glass"></i></h3>
                         <hr>
-                        <p>A diverse workforce is better equipped to analyze problems from multiple angles. this diversity of thought can lead to more effective problem-solving and decision-making, ultimately improving outcomes.</p>
+                        <p>A diverse workforce is better equipped to analyze problems from multiple angles. this
+                            diversity of thought can lead to more effective problem-solving and decision-making,
+                            ultimately improving outcomes.</p>
                     </div>
                 </div>
                 <div id="benefits2">
-                    <div><h3>Greater Employee Satisfaction <i class="fa-regular fa-face-smile"></i></h3>
+                    <div>
+                        <h3>Greater Employee Satisfaction <i class="fa-regular fa-face-smile"></i></h3>
                         <hr>
-                        <p>When individuals feel included and valued, they are more likely to be engaged and satisfied with their work or studies. this can lead to lower turnover rates and a more positive organizational culture.</p>
+                        <p>When individuals feel included and valued, they are more likely to be engaged and satisfied
+                            with their work or studies. this can lead to lower turnover rates and a more positive
+                            organizational culture.</p>
                     </div>
-                    <div><h3>Broader Market Reach<i class="fa-solid fa-globe"></i></h3>
+                    <div>
+                        <h3>Broader Market Reach <i class="fa-solid fa-globe"></i></h3>
                         <hr>
-                        <p>Organizations that prioritize diversity and inclusion can better understand and connect with diverse customer bases. This cultural competence can enhance marketing efforts, customer relations, and overall business success by appealing to a wider audience.</p>
+                        <p>Organizations that prioritize diversity and inclusion can better understand and connect with
+                            diverse customer bases. This cultural competence can enhance marketing efforts, customer
+                            relations, and overall business success by appealing to a wider audience.</p>
                     </div>
                 </div>
                 <div id="benefits-image">
@@ -75,17 +85,83 @@
             </div>
 
         </section>
+
+        <!-- education section  now Diversity section-->
+        <section id="diversity">
+            <h2>Diversity</h2>
+            <br>
+            <p>Diversity is the range of people in your workforce. For example, this might mean people with different
+                ages, religions, ethnicities, people with disabilities, and both men and women. It also means valuing
+                those differences.</p>
+            <br>
+
+            <h3>To avoid bullying, harassment or discrimination, you should make sure:</h3>
+            <br>
+            <ul id="avoid">
+                <li>Your workforce and managers understand what is protected by discrimination law.</li>
+                <br>
+                <li>What's expected under discrimination law is actually happening in your workplace.</li>
+                <br>
+                <li>You make changes if what’s expected is not happening, for example stepping up staff training.</li>
+                <br>
+                <li>Your workforce and managers understand what the benefits can be of having a range of people with
+                    different backgrounds.</li>
+                <br>
+            </ul>
+        </section>
+
+        <!-- employment section now inclusivity section -->
+        <section id="inclusivity">
+            <h2>Inclusivity</h2>
+            <br>
+            <p>An inclusive workplace means everyone feels valued at work.</p>
+            <br>
+             <h3>It lets all employees feel safe to:</h3>
+            <br>
+
+                <p>Come up with different ideas.</p>
+                <br>
+                <p>Raise issues and suggestions to managers, knowing this is encouraged.</p>
+                <br>
+                <p>Try doing things differently to how they’ve been done before, with management approval.</p>
+                <br>
+                <p>An inclusive workplace can help lower the risk of bullying, harassment and discrimination.</p>
+            <br>
+            <h3>The Equality Act applies to all workplaces and protects people against discrimination on the grounds of
+                protected characteristics, of which there are nine:</h3>
+            <br>
+            <section id="characteristics">
+
+                <p>age,
+                    disability,
+                    gender reassignment,
+                    marriage and civil partnership,
+                    pregnancy and maternity,
+                    race,
+                    religion or belief,
+                    sex and
+                    sexual orientation</p>
+                <br>
+
+            </section>
+        </section>
+        <section>
+
+        </section>
     </main>
 
     <!--Footer-->
     <footer>
         <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="https://twitter.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
     <!-- Font Awesome kit-->
