--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
         <section id="diversity">
             <h2>Diversity</h2>
             <br>
-            <p>Diversity is the range of people in your workforce. For example, this might mean people with different
-                ages, religions, ethnicities, people with disabilities, and both men and women. It also means valuing
+            <p>Diversity is the range of people in your workforce or place of education. For example, this might mean people with different
+                ages, religions, ethnicities, people with disabilities, and all genders. It also means valuing
                 those differences.</p>
             <br>
 
             <h3>To avoid bullying, harassment or discrimination, you should make sure:</h3>
             <br>
             <ul id="avoid">
-                <li>Your workforce and managers understand what is protected by discrimination law.</li>
+                <li>Your workforce, managers, tutors and students understand what is protected by discrimination law.</li>
                 <br>
-                <li>What's expected under discrimination law is actually happening in your workplace.</li>
+                <li>What's expected under discrimination law is actually happening in your workplace or educational environment.</li>
                 <br>
                 <li>You make changes if what’s expected is not happening, for example stepping up staff training.</li>
                 <br>
-                <li>Your workforce and managers understand what the benefits can be of having a range of people with
+                <li>Your workforce, managers, tutors and students understand what the benefits can be of having a range of people with
                     different backgrounds.</li>
                 <br>
             </ul>
@@ -114,20 +114,20 @@
         <section id="inclusivity">
             <h2>Inclusivity</h2>
             <br>
-            <p>An inclusive workplace means everyone feels valued at work.</p>
+            <p>An inclusive workplace means everyone feels valued at work or in an educational setting.</p>
             <br>
-             <h3>It lets all employees feel safe to:</h3>
+             <h3>It lets everyone feel safe to:</h3>
             <br>
 
                 <p>Come up with different ideas.</p>
                 <br>
-                <p>Raise issues and suggestions to managers, knowing this is encouraged.</p>
+                <p>Raise issues and suggestions to managers or tutors, knowing this is encouraged.</p>
                 <br>
-                <p>Try doing things differently to how they’ve been done before, with management approval.</p>
+                <p>Try doing things differently to how they’ve been done before.</p>
                 <br>
-                <p>An inclusive workplace can help lower the risk of bullying, harassment and discrimination.</p>
+                <p>An inclusive workplace or place of education can help lower the risk of bullying, harassment and discrimination.</p>
             <br>
-            <h3>The Equality Act applies to all workplaces and protects people against discrimination on the grounds of
+            <h3>The Equality Act applies to all workplaces and schools or colleges and protects people against discrimination on the grounds of
                 protected characteristics, of which there are nine:</h3>
             <br>
             <section id="characteristics">
@@ -145,8 +145,7 @@
 
             </section>
         </section>
-        <section>
-
+        <section id="final-image">
         </section>
     </main>
 
