change cover text to better fit new content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
         <section id="hero">
             <div id="cover-text">
-                <h2>Your resource for inclusive change</h2>
+                <h2>Empower. Include.<br> Thrive.</h2>
             </div>
         </section>
         <section id="help">
@@ -85,6 +85,8 @@
             </div>
 
         </section>
+<br>
+<br>
 
         <!-- education section  now Diversity section-->
         <section id="diversity">
