changed some typos in sections

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             </div>
 
         </section>
-<br>
-<br>
+
+
 
         <!-- education section  now Diversity section-->
         <section id="diversity">
@@ -134,7 +134,7 @@
             <br>
             <section id="characteristics">
 
-                <p>age,
+                <p> Age,
                     disability,
                     gender reassignment,
                     marriage and civil partnership,
@@ -142,7 +142,7 @@
                     race,
                     religion or belief,
                     sex and
-                    sexual orientation</p>
+                    sexual orientation.</p>
                 <br>
 
             </section>
