remove commented out line height css in tablets and larger media query

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
         content="diversity, equal treatment at work, inclusivity, anti-bullying, anti-discrimination, how to implement diversity and inclusivity policies and practices uk">
     <!-- Title -->
     <title>Diversity + Inclusion</title>
-    <!-- Favicon 
-    <link rel="shortcut icon" href="/favicon1.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" href="/apple-touch-icon.png" >
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/apple-touch-icon-180x180.png">-->
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -92,7 +88,8 @@
         <section id="diversity">
             <h2>Diversity</h2>
             <br>
-            <p>Diversity is the range of people in your workforce or place of education. For example, this might mean people with different
+            <p>Diversity is the range of people in your workforce or place of education. For example, this might mean
+                people with different
                 ages, religions, ethnicities, people with disabilities, and all genders. It also means valuing
                 those differences.</p>
             <br>
@@ -100,13 +97,16 @@
             <h3>To avoid bullying, harassment or discrimination, you should make sure:</h3>
             <br>
             <ul id="avoid">
-                <li>Your workforce, managers, tutors and students understand what is protected by discrimination law.</li>
+                <li>Your workforce, managers, tutors and students understand what is protected by discrimination law.
+                </li>
                 <br>
-                <li>What's expected under discrimination law is actually happening in your workplace or educational environment.</li>
+                <li>What's expected under discrimination law is actually happening in your workplace or educational
+                    environment.</li>
                 <br>
                 <li>You make changes if what’s expected is not happening, for example stepping up staff training.</li>
                 <br>
-                <li>Your workforce, managers, tutors and students understand what the benefits can be of having a range of people with
+                <li>Your workforce, managers, tutors and students understand what the benefits can be of having a range
+                    of people with
                     different backgrounds.</li>
                 <br>
             </ul>
@@ -118,18 +118,20 @@
             <br>
             <p>An inclusive workplace means everyone feels valued at work or in an educational setting.</p>
             <br>
-             <h3>It lets everyone feel safe to:</h3>
+            <h3>It lets everyone feel safe to:</h3>
             <br>
 
-                <p>Come up with different ideas.</p>
-                <br>
-                <p>Raise issues and suggestions to managers or tutors, knowing this is encouraged.</p>
-                <br>
-                <p>Try doing things differently to how they’ve been done before.</p>
-                <br>
-                <p>An inclusive workplace or place of education can help lower the risk of bullying, harassment and discrimination.</p>
+            <p>Come up with different ideas.</p>
             <br>
-            <h3>The Equality Act applies to all workplaces and schools or colleges and protects people against discrimination on the grounds of
+            <p>Raise issues and suggestions to managers or tutors, knowing this is encouraged.</p>
+            <br>
+            <p>Try doing things differently to how they’ve been done before.</p>
+            <br>
+            <p>An inclusive workplace or place of education can help lower the risk of bullying, harassment and
+                discrimination.</p>
+            <br>
+            <h3>The Equality Act applies to all workplaces and schools or colleges and protects people against
+                discrimination on the grounds of
                 protected characteristics, of which there are nine:</h3>
             <br>
             <section id="characteristics">
