validated both html and css made some changes to html added hidden headings to characteristics and final image and took out br from list and increased margin bottom for li items

--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
             <ul id="avoid">
                 <li>Your workforce, managers, tutors and students understand what is protected by discrimination law.
                 </li>
-                <br>
+                <!--<br>-->
                 <li>What's expected under discrimination law is actually happening in your workplace or educational
                     environment.</li>
-                <br>
+                <!--<br>-->
                 <li>You make changes if what’s expected is not happening, for example stepping up staff training.</li>
-                <br>
+                <!--<br>-->
                 <li>Your workforce, managers, tutors and students understand what the benefits can be of having a range
                     of people with
                     different backgrounds.</li>
-                <br>
+                <!--<br>-->
             </ul>
         </section>
 
@@ -120,7 +120,6 @@
             <br>
             <h3>It lets everyone feel safe to:</h3>
             <br>
-
             <p>Come up with different ideas.</p>
             <br>
             <p>Raise issues and suggestions to managers or tutors, knowing this is encouraged.</p>
@@ -135,7 +134,7 @@
                 protected characteristics, of which there are nine:</h3>
             <br>
             <section id="characteristics">
-
+                <h6 class="hidden">Protected Characteristics</h6>
                 <p> Age,
                     disability,
                     gender reassignment,
@@ -150,6 +149,7 @@
             </section>
         </section>
         <section id="final-image">
+            <h6 class="hidden">Final Image</h6>
         </section>
     </main>
 
